--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,11 +9,7 @@
         android:id="@+id/loginFragment"
         android:name="com.example.authforaeon.presentation.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_loginFragment_to_paymentListFragment"
-            app:destination="@id/paymentListFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_login" />
     <fragment
         android:id="@+id/paymentListFragment"
         android:name="com.example.authforaeon.presentation.payment.PaymentListFragment"
@@ -21,13 +17,6 @@
         tools:layout="@layout/fragment_payment_list" />
     <fragment
         android:id="@+id/loadingFragment"
-        android:name="com.example.authforaeon.presentation.LoadingFragment"
-        android:label="LoadingFragment" >
-        <action
-            android:id="@+id/action_loadingFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-        <action
-            android:id="@+id/action_loadingFragment_to_paymentListFragment"
-            app:destination="@id/paymentListFragment" />
-    </fragment>
+        android:name="com.example.authforaeon.presentation.loading.LoadingFragment"
+        android:label="LoadingFragment" />
 </navigation>
